<resources>
    <string name="app_name">Tourisz</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="uname">Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Password*</string>
    <string name="login">Login</string>
    <string name="forgot_uname">Forgot Username?</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="email">Email Id</string>
    <string name="email_hint">Email Id*</string>
    <string name="email_mob">Email Id or Mobile Number</string>
    <string name="resend">Resend</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="name_hint">Name*</string>
    <string name="phone">Phone Number</string>
    <string name="register">Register</string>
    <string name="otp_action">Enter OTP below we have send on given mobile number</string>
    <string name="home">Home</string>
    <string name="my_booking">My Booking</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_cond">Terms and Cond</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel">Hotel</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="hotel_booking">Hotel Booking</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="book_now">\tBook now</string>
    <string name="book_now_title">Book now</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including vers</string>
    <string name="rate_title">Rate:</string>
    <string name="rate_room">Rate</string>
    <string name="rate_room_hint">Rate*</string>
    <string name="rate">Rs.%1$s</string>
    <string name="event_booking">Event Booking</string>
    <string name="date_title">Date:</string>
    <string name="event_details">Event Details</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="no_person">Number of Persons</string>
    <string name="no_room">Number of Rooms</string>
    <string name="book">Book</string>
    <string name="room_type">Room Type</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="num_person">Select Number of Persons</string>
    <string name="num_room">Select Number of Rooms</string>
    <string name="pay_now">Pay Now</string>
    <string name="paypal">PayTm</string>
    <string name="wallet">Wallet</string>
    <string name="booking_confirm">Thanks for booking confirmation!</string>
    <string name="confirm_booking">Confirm booking</string>
    <string name="paypal_payment_success">Congrats, Payment Successful.</string>
    <string name="ok">Ok</string>
    <string name="image">Image</string>
    <string name="comment">Comment</string>
    <string name="edit_hotel">Edit Hotel</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="edit_event">Edit Event</string>
    <string name="add_event">Add Event</string>
    <string name="add_user">Add User</string>
    <string name="details">Details</string>
    <string name="booking_details">Booking Details</string>
    <string name="edit_user">Edit User</string>
    <string name="edit_agent">Edit Agent</string>
    <string name="add_agent">Add Agent</string>
    <string name="add_flyer">Add Flyer</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="img_upload">Image Upload</string>
    <string name="cmt_upload">Upload Comment</string>
    <string name="comp_name">Trello Hillview</string>
    <string name="comp_address">B.M.C.\\nDeccan</string>
    <string name="comp_phone">+91 9999999999</string>
    <string name="change_pass">Change Password</string>
    <string name="wallet_soon">Wallet payment coming soon. Please use PayTm for now.</string>
    <string name="select_image">Capture Photo from Camera</string>
    <string name="select_photo_from">Select photo from</string>
    <string name="enter_comment">Enter comment</string>
    <string name="tnc">I accept </string>
    <string name="tnc1">terms and conditions.</string>
    <string name="accept_tnc">Please accept terms and conditions.</string>
    <string name="mob_net_error">Please connect to KIVI wifi to continue box installation</string>
    <string name="unknow_error_txt">Unknown Error</string>
    <string name="time_our_error">Time out.</string>
    <string name="auth_fail">Authentication Failed.</string>
    <string name="server_error">Server error.</string>
    <string name="netwotk_error">Unable to connect with network.</string>
    <string name="parser_error">Parse error.</string>
    <string name="can_not_connect">Could not connect to internet. Please try again.</string>
    <string name="unable_to_call_api">Unable to make a API call.</string>
    <string name="could_not_find_corresponding_data_provided_input">Could not find data corresponding to the provided inputs. Please check the inputs and try again.</string>
    <string name="please_enter_all_credentials">Please enter all the credentials!</string>
    <string name="server_token">Server Token</string>
    <string name="login_attempt_limit_exceeds">You have exceeded the limit of 5 login attempts. Your account has been locked. Please contact your supervisor.</string>
    <string name="no_internet_available">No internet available on this network. Please connect to another network or turn off the Wi-Fi !</string>
    <string name="no_result">No Result</string>
    <string name="invalid_phone">Invalid phone number. Enter valid phone number.</string>
    <string name="invalid_phone1">Invalid phone number. Enter phone number with country code.</string>
    <string name="enter_phone">Enter phone number!</string>
    <string name="invalid_pass">Invalid password. Enter minimum 6 digit password!</string>
    <string name="enter_pass">Enter password!</string>
    <string name="invalid_email">Invalid email id. Enter valid email id!</string>
    <string name="enter_email">Enter email id!</string>
    <string name="invalid_uname">Invalid username. Enter minimum 4 digit username!</string>
    <string name="enter_uname">Enter user name!</string>
    <string name="enter_validuname">Enter valid user name!</string>
    <string name="enter_agencyname">Enter agency name!</string>
    <string name="forgot_enter_phone_email">Enter phone number or email id!</string>
    <string name="forgot_valid_phone_email">Enter valid phone number or email id!</string>
    <string name="enter_otp">Enter OTP!</string>
    <string name="invalid_otp">Invalid OTP. Enter valid OTP!</string>
    <string name="confirm">Confirm</string>
    <string name="login_with">OR\nLogin with</string>
    <string name="select">Select</string>
    <string name="default_notification_channel_id">channel</string>
    <string name="user">User</string>
    <string name="agent">Agent</string>
    <string name="agency">Agency name</string>
    <string name="agency_hint">Agency name*</string>
    <string name="select_user">Select user type</string>
    <string name="users">Users</string>
    <string name="agents">Agents</string>
    <string name="hotels">Hotels</string>
    <string name="hotel_bookings">Hotel Bookings</string>
    <string name="event_bookings">Event Bookings</string>
    <string name="hotel_transactions">Hotel Transactions</string>
    <string name="event_transactions">Event Transactions</string>
    <string name="transactions_details">Transactions Details</string>
    <string name="change_password">Change Password</string>
    <string name="enter_title">Enter title!</string>
    <string name="enter_pos">Enter position!</string>
    <string name="flyer">Flyer</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string-array name="user_type">
        <item>User</item>
        <item>Agent</item>
    </string-array>
    <string name="otp_resend">Didn\'t receive the OTP?\nResend OTP</string>
    <string name="verify">Verify</string>
</resources>