<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".user.view.fragment.ImageUploadFragment">


    <RelativeLayout
        android:id="@+id/relUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:background="@color/black_lite"
        android:visibility="gone"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hotel_img_height"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

            <com.tourisz.custome_view.PrimaryButton
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:layout_margin="@dimen/margin_xsmall"/>


            <Button
                android:id="@+id/btnCancel"
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtSelectImage"
        style="@style/NavTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/select_image" />

    <LinearLayout
        android:id="@+id/linBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <com.tourisz.custome_view.PrimaryButton
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginRight="1dp"
            android:layout_weight="5"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:layout_margin="@dimen/margin_xsmall"/>

        <Button
            android:id="@+id/btnGallery"
            style="@style/ButtonMedTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="5"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:visibility="gone"
            android:layout_margin="@dimen/margin_xsmall"/>

    </LinearLayout>

</RelativeLayout>